--- a/Bopit/app/src/main/res/layout/activity_game.xml
+++ b/Bopit/app/src/main/res/layout/activity_game.xml
@@ -6,19 +6,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.bopit.app.MainActivity">
+    tools:context="com.bopit.app.GameActivity">
 
     <TextView
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="GAME!"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/gameButton" />
 
 </RelativeLayout>
